[tool.poetry]
name = "stream-budget"
version = "0.1.0"
description = ""
authors = ["Elias Tavarez <etav@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"
pandas = "^2.1.4"
plotly = "^5.18.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
